# autodoc-traits

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  autodoc_traits.py  pyproject.toml  setup.py
.github/: dependabot.yaml
.github/workflows/: publish.yml  release.yaml  test.yaml
autodoc_traits/: __init__.py  autodoc_traits.py
tests/: README.md  conftest.py  test_autodoc_traits.py  test_fixtures.py
tests/docs/: sample_module.py  test_module.py
tests/docs/source/: conf.py  index.rst
tests/docs/source/autoclass/: members.rst  undoc_members.rst
tests/docs/source/autoconfigurable/: exclude_members.rst  inherited_members.rst  members.rst  no_members.rst  non_configurable_raises_error.rst  specified_members.rst
tests/docs/source/automodule/: members.rst
tests/docs/source/autotrait/: help.rst  noconfig.rst  nohelp.rst  non_trait_raises_error.rst
