# project
# - ref 1: https://peps.python.org/pep-0621/
# - ref 2: https://hatch.pypa.io/latest/config/metadata/#project-metadata
#
[project]
name = "autodoc-traits"
description = "Sphinx extension to autodoc traitlets"
keywords = ["sphinx", "extension", "autodoc", "traitlets"]
authors = [
    {name = "Jupyter Development Team", email = "jupyter@googlegroups.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "sphinx>=4",
    # FIXME: traitlets are upper bounded as a workaround to
    #        https://github.com/jupyterhub/autodoc-traits/issues/55
    "traitlets>=4,<5.10",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Documentation = "https://github.com/jupyterhub/autodoc-traits#readme"
Issues = "https://github.com/jupyterhub/autodoc-traits/issues"
Source = "https://github.com/jupyterhub/autodoc-traits"


# build-system
# - ref 1: https://peps.python.org/pep-0517/
#
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# hatch ref: https://hatch.pypa.io/latest/
#
[tool.hatch.version]
path = "autodoc_traits.py"


# autoflake is used for autoformatting Python code
#
# ref: https://github.com/PyCQA/autoflake#readme
#
[tool.autoflake]
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true
#remove-unused-variables = true


# isort is used for autoformatting Python code
#
# ref: https://pycqa.github.io/isort/
#
[tool.isort]
profile = "black"


# black is used for autoformatting Python code
#
# ref: https://black.readthedocs.io/en/stable/
#
[tool.black]
skip-string-normalization = true
# target-version should be all supported versions, see
# https://github.com/psf/black/issues/751#issuecomment-473066811
target_version = [
    "py37",
    "py38",
    "py39",
    "py310",
    "py311",
]


# pytest is used for running Python based tests
#
# ref: https://docs.pytest.org/en/stable/
#
[tool.pytest.ini_options]
addopts = "--verbose --color=yes --durations=10 --ignore=tests/docs/sample_module.py"


# tbump is used to simplify and standardize the release process when updating
# the version, making a git commit and tag, and pushing changes.
#
# ref: https://github.com/your-tools/tbump#readme
#
[tool.tbump.version]
current = "1.2.2.dev"

# Example of a pep440 regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<pre>((a|b|rc)\d+)|)
  \.?
  (?P<dev>(?<=\.)dev\d*|)
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "autodoc_traits.py"
